--- a/tesla-clone/components/Header/header.module.scss
+++ b/tesla-clone/components/Header/header.module.scss
@@ -151,3 +151,93 @@
     margin: auto;
   }
 }
+@media screen and (max-width: 370px) {
+  .section {
+    display: inline-block !important;
+    padding: 20px;
+  }
+  .btn {
+    background-color: rgba(23, 26, 32, 0.8);
+    opacity: unset;
+  }
+  .btnMain {
+    display: inline-block !important;
+    padding: 13rem 22.5px 0; 
+    opacity: unset;
+  }
+  .btn {
+    width: rem(220) !important;
+    height: rem(35) !important;
+    font-size: 12px;
+  }
+  .btnMain {
+    .btn:nth-child(2) {
+      margin: 5px 0 0;
+    }
+  }
+  .textArea {
+    margin-top: 4rem;
+  }
+  .textArea p {
+    font-size: 18px;
+    width: 86%;
+    margin: auto;
+  }
+  .textArea h3 {
+    width: 100%;
+    margin: auto;
+    font-size: 2.5rem;
+  }
+  .downIcon {
+    display: block;
+    margin: auto;
+  }
+  #access {
+    margin-right: 1rem !important;
+  }
+}
+@media screen and (max-width: 470px) {
+  .section {
+    display: inline-block !important;
+    padding: 47px;
+  }
+  .btn {
+    background-color: rgba(23, 26, 32, 0.8);
+    opacity: unset;
+  }
+  .btnMain {
+    display: inline-block !important;
+    padding: 22rem 22.5px 0; 
+    opacity: unset;
+  }
+  .btn {
+    width: rem(220) !important;
+    height: rem(35) !important;
+    font-size: 12px;
+  }
+  .btnMain {
+    .btn:nth-child(2) {
+      margin: 5px 0 0;
+    }
+  }
+  .textArea {
+    margin-top: 4rem;
+  }
+  .textArea p {
+    font-size: 18px;
+    width: 86%;
+    margin: auto;
+  }
+  .textArea h3 {
+    width: 100%;
+    margin: auto;
+    font-size: 2.5rem;
+  }
+  .downIcon {
+    display: block;
+    margin: auto;
+  }
+  #access {
+    margin-right: 1rem !important;
+  }
+}
